# till

./: .gitignore  Cargo.toml  LICENSE  README.md  package.yaml  stack.yaml
app/: Main.hs
src/: Lib.hs  capabilities.rs  engine.rs  lib.rs  main.rs  matchers.rs  notifications.rs  ui.rs
src/interpreters/: cli.rs
test/: Spec.hs
tests/: cli_exec.rs
